<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_page_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etForgotUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forgot_email_hint"
            android:inputType="text"
            android:autofillHints="username"/>

        <Button
            android:id="@+id/btnForgotContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</ScrollView>
